erDiagram
    USER ||--o| INSTITUTION : "linkedId (institution login)"
    USER ||--o| STUDENT : "linkedId (student login)"
    INSTITUTION ||--o{ STUDENT : "enrolls"
    INSTITUTION ||--o{ TRANSCRIPT : "issues"
    STUDENT ||--o{ TRANSCRIPT : "owns"

    USER {
        ObjectId _id PK
        string email UK
        string passwordHash
        string role "admin|institution|student|verifier"
        string linkedId "institutionId or studentId"
        string refreshTokenHash
        date createdAt
    }

    INSTITUTION {
        ObjectId _id PK
        string institutionId UK "uuid"
        string name
        string email
        string institutionCode UK
        string walletAddress
        int walletIndex "HD derivation index"
        bool isApproved
        bool onChain
        string registrationTxHash
        date approvedAt
    }

    STUDENT {
        ObjectId _id PK
        string studentId UK "uuid"
        string name
        string email
        string institutionId FK
        string userId
        bool onChain
        string registrationTxHash
    }

    TRANSCRIPT {
        ObjectId _id PK
        string transcriptId UK "uuid"
        string studentId FK
        string institutionId FK
        string ipfsHash
        string ipfsCid
        string sha256Hash "anchored on-chain"
        string transactionHash
        int blockNumber
        string qrCodeUrl
        string qrCodeData
        bool isRevoked
        date issuedAt
    }
